--- a/roboshop.yml
+++ b/roboshop.yml
@@ -115,14 +115,13 @@ spec:
       port: 80
       targetPort: 8080
 ---
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: frontend
-#spec:
-#  type: LoadBalancer
-#  selector:
-#    app.kubernetes.io/name: frontend
-#  ports:
-#    - port: 80
-#      targetPort: 80
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-roboshop
+spec:
+  selector:
+    app.kubernetes.io/name: frontend
+  ports:
+    - port: 80
+      targetPort: 8080
