--- a/roboshop.yml
+++ b/roboshop.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: frontend
-      image: rkalluru/frontend
+      image: nigel09/frontend
 
 apiVersion: v1
 kind: Pod
@@ -18,7 +18,7 @@ metadata:
 spec:
   containers:
     - name: catalogue
-      image: rkalluru/catalogue
+      image: nigel09/catalogue
 ---
 apiVersion: v1
 kind: Pod
@@ -29,7 +29,7 @@ metadata:
 spec:
   containers:
     - name: cart
-      image: rkalluru/cart
+      image: nigel09/cart
 ---
 apiVersion: v1
 kind: Pod
@@ -40,7 +40,7 @@ metadata:
 spec:
   containers:
     - name: shipping
-      image: rkalluru/shipping
+      image: nigel09/shipping
 ---
 apiVersion: v1
 kind: Pod
@@ -51,7 +51,7 @@ metadata:
 spec:
   containers:
     - name: payment
-      image: rkalluru/payment
+      image: nigel09/payment
 
 ---
 
