--- a/roboshop.yml
+++ b/roboshop.yml
@@ -1,13 +1,13 @@
-apiVersion: v1
-kind: Pod
-metadata:
-  name: frontend
-  labels:
-    app.kubernetes.io/name: frontend
-spec:
-  containers:
-    - name: frontend
-      image: nigel09/frontend
+#apiVersion: v1
+#kind: Pod
+#metadata:
+#  name: frontend
+#  labels:
+#    app.kubernetes.io/name: frontend
+#spec:
+#  containers:
+#    - name: frontend
+#      image: nigel09/frontend
 
 apiVersion: v1
 kind: Pod
