--- a/roboshop.yml
+++ b/roboshop.yml
@@ -1,14 +1,14 @@
-#apiVersion: v1
-#kind: Pod
-#metadata:
-#  name: frontend
-#  labels:
-#    app.kubernetes.io/name: frontend
-#spec:
-#  containers:
-#    - name: frontend
-#      image: nigel09/frontend
-
+apiVersion: v1
+kind: Pod
+metadata:
+  name: frontend
+  labels:
+    app.kubernetes.io/name: frontend
+spec:
+  containers:
+    - name: frontend
+      image: rkalluru/frontend
+---
 apiVersion: v1
 kind: Pod
 metadata:
@@ -18,7 +18,7 @@ metadata:
 spec:
   containers:
     - name: catalogue
-      image: nigel09/catalogue
+      image: rkalluru/catalogue
 ---
 apiVersion: v1
 kind: Pod
@@ -29,7 +29,7 @@ metadata:
 spec:
   containers:
     - name: cart
-      image: nigel09/cart
+      image: rkalluru/cart
 ---
 apiVersion: v1
 kind: Pod
@@ -40,7 +40,7 @@ metadata:
 spec:
   containers:
     - name: shipping
-      image: nigel09/shipping
+      image: rkalluru/shipping
 ---
 apiVersion: v1
 kind: Pod
@@ -51,10 +51,8 @@ metadata:
 spec:
   containers:
     - name: payment
-      image: nigel09/payment
-
+      image: rkalluru/payment
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -113,15 +111,4 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-roboshop
-spec:
-  selector:
-    app.kubernetes.io/name: frontend
-  ports:
-    - port: 80
       targetPort: 8080
